--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header
-        <h1>Título do site<\h1>
+        <h1>Curso gratis<\h1>
         </header>
         <article>
-            <h2>Artuigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de teste </h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, itaque sapiente, doloribus blanditiis eveniet, delectus facere mollitia eum cumque doloremque facilis ratione officiis. Laborum maiores quos ducimus error hic ipsum!</p>
         </article>
         <article>
-            <h2>Aritgo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>curso teste 2</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse vitae expedita inventore neque. Sit quia dolor quaerat numquam amet alias incidunt optio? Possimus impedit nesciunt ipsam ratione iure molestias ab.</p>
         </article>
     </main>
 </body>
