--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <header
-        <h1>Curso gratis<\h1>
+        <h1>Curso gratis</h1>
         </header>
         <article>
             <h2>Curso de teste </h2>
